# awesome-harness

./: .agentharness-allowed-additions.txt  .gitignore  .markdownlint-cli2.yaml  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.md  README.md  ROADMAP.md  SECURITY.md  fable-review.md  manifest.yaml  package.json  pyproject.toml  requirements-dev.txt
.agentharness-policy/: profile.yaml
.agents/skills/: agentic-loops  audit-review-followup  branching  clean-architecture  committing  dependency-injection  design-patterns  error-handling  logging  (+8 more)
.claude/: settings.json
.github/: .gitignore.template  BRANCHING_STRATEGY.md  CODEOWNERS  CODING_GUIDELINES.md  COMMITTING_GUIDELINES.md  README.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: ARCHITECTURE.md  CLIENT_COMPATIBILITY.md  DECISIONS.md  DEMO.md  INTEGRATION.md  KNOWN_LIMITATIONS.md  README.md  RELEASING.md  STATUS.md
frameworks/: README.md
languages/: README.md
patterns/: README.md
runtime/: python-build-standalone.lock.json
tools/: agent-lock.sh  analyze_structure.py  check-completion.sh  check-file-placement.sh  check.sh  generate-agents-md.sh  generate-codex-agents.sh  generate-copilot-agents.sh  generate-copilot-instructions.sh  generate-cursor-agents.sh  generate-cursor-rules.sh  generate-gemini-agents.sh  generate-gemini-md.sh  generate-kilo-agents.sh  generate-kilo-rules.sh  generate-manifest.py  generate-opencode-agents.sh  safe-pr-merge.sh  verify-content-quality.py  verify-manifest.sh  verify-skill-symlinks.sh
(+291 files in other folders)
