[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentharness"
version = "0.1.0"
description = "Deterministic project bootstrap policy core"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastjsonschema==2.21.2",
    "PyYAML==6.0.3",
]

[project.scripts]
agentharness = "agentharness.cli:main"

[tool.setuptools.package-data]
agentharness = ["schemas/*.json"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
